test/ui/tests/lowering/toplevel-obligatory-annotations.stderr
error[E015]: the declaration ‘Alpha’ does not have a type annotation
 --> ${TEST_FOLDER}/lowering/toplevel-obligatory-annotations.lushui:3:11
  |
3 | data Alpha of
  |          ><
  |
 note: type annotations are mandatory on declarations
 help: provide a type annotation for the declaration with ‘: ?type’

error[E015]: the parameter ‘a’ does not have a type annotation
 --> ${TEST_FOLDER}/lowering/toplevel-obligatory-annotations.lushui:4:11
  |
4 |     alpha a
  |           ^
  |
 note: type annotations are mandatory on parameters of declarations
 help: provide a type annotation for the parameter with ‘(a: ?type)’

error[E015]: the declaration ‘alpha’ does not have a type annotation
 --> ${TEST_FOLDER}/lowering/toplevel-obligatory-annotations.lushui:4:12
  |
4 |     alpha a
  |           ><
  |
 note: type annotations are mandatory on declarations
 help: provide a type annotation for the declaration with ‘: ?type’

error[E015]: the parameter ‘A’ does not have a type annotation
 --> ${TEST_FOLDER}/lowering/toplevel-obligatory-annotations.lushui:6:11
  |
6 | data Beta A of
  |           ^
  |
 note: type annotations are mandatory on parameters of declarations
 help: provide a type annotation for the parameter with ‘(A: ?type)’

error[E015]: the declaration ‘Beta’ does not have a type annotation
 --> ${TEST_FOLDER}/lowering/toplevel-obligatory-annotations.lushui:6:12
  |
6 | data Beta A of
  |           ><
  |
 note: type annotations are mandatory on declarations
 help: provide a type annotation for the declaration with ‘: ?type’

error[E015]: the parameter ‘A’ does not have a type annotation
 --> ${TEST_FOLDER}/lowering/toplevel-obligatory-annotations.lushui:7:10
  |
7 |     beta A: Beta A
  |          ^
  |
 note: type annotations are mandatory on parameters of declarations
 help: provide a type annotation for the parameter with ‘(A: ?type)’

error[E015]: the declaration ‘number’ does not have a type annotation
 --> ${TEST_FOLDER}/lowering/toplevel-obligatory-annotations.lushui:9:7
  |
9 | number = 0
  |      ><
  |
 note: type annotations are mandatory on declarations
 help: provide a type annotation for the declaration with ‘: ?type’

error[E015]: the parameter ‘f’ does not have a type annotation
  --> ${TEST_FOLDER}/lowering/toplevel-obligatory-annotations.lushui:11:7
   |
11 | apply f x (y) = f x
   |       ^
   |
  note: type annotations are mandatory on parameters of declarations
  help: provide a type annotation for the parameter with ‘(f: ?type)’

error[E015]: the parameter ‘x’ does not have a type annotation
  --> ${TEST_FOLDER}/lowering/toplevel-obligatory-annotations.lushui:11:9
   |
11 | apply f x (y) = f x
   |         ^
   |
  note: type annotations are mandatory on parameters of declarations
  help: provide a type annotation for the parameter with ‘(x: ?type)’

error[E015]: the parameter ‘y’ does not have a type annotation
  --> ${TEST_FOLDER}/lowering/toplevel-obligatory-annotations.lushui:11:11
   |
11 | apply f x (y) = f x
   |           ^^^
   |
  note: type annotations are mandatory on parameters of declarations
  help: provide a type annotation for the parameter with ‘(y: ?type)’

error[E015]: the declaration ‘apply’ does not have a type annotation
  --> ${TEST_FOLDER}/lowering/toplevel-obligatory-annotations.lushui:11:14
   |
11 | apply f x (y) = f x
   |             ><
   |
  note: type annotations are mandatory on declarations
  help: provide a type annotation for the declaration with ‘: ?type’

error: aborting due to 11 previous errors

